解决代码沙箱漏洞问题（用简单的方法解决部分问题）